--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,8 @@ version: 1.0.0
 description: The brain behind the PixliesNet plugins
 api-version: 1.17
 authors: [MickMMars]
+website: www.pixlies.net
+prefix: Core
+libraries:
+    - org.mongodb:mongo-java-driver:3.12.3
+    - org.projectlombok:lombok:1.18.20
