--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,9 @@
             <version>3.12.3</version>
         </dependency>
     </dependencies>
-    
+    <properties>
+        <maven.compiler.source>16</maven.compiler.source>
+        <maven.compiler.target>16</maven.compiler.target>
+    </properties>
+
 </project>
