--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,7 +4,9 @@ description: The brain behind the PixliesNet plugins
 api-version: 1.17
 authors: [MickMMars]
 website: www.pixlies.net
+main: net.pixlies.Main
 prefix: Core
 libraries:
     - org.mongodb:mongo-java-driver:3.12.3
     - org.projectlombok:lombok:1.18.20
+    - com.github.stefvanschie.inventoryframework:IF:0.10.0
