Banned players can't join

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,3 +11,4 @@ libraries:
     - org.projectlombok:lombok:1.18.20
     - com.github.stefvanschie.inventoryframework:IF:0.10.0
     - commons-io:commons-io:2.11.0
+    - org.ocpsoft.prettytime:prettytime:5.0.2.Final
