Fixed the papercommandmanager and added the commands to plugin.yml

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,3 +12,14 @@ libraries:
     - com.github.stefvanschie.inventoryframework:IF:0.10.0
     - commons-io:commons-io:2.11.0
     - org.ocpsoft.prettytime:prettytime:5.0.2.Final
+commands:
+    modules:
+        description: Modules command
+    ban:
+        description: Ban command
+    mute:
+        description: Mute command
+    tempban:
+        description: TempBan command
+    tempmute:
+        description: TempMute command
