--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.pixlies</groupId>
+    <groupId>net.pixlies.core</groupId>
     <artifactId>PixliesCoreV2</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>Nations</module>
-    </modules>
 
     <repositories>
         <repository>
