--- a/Nations/pom.xml
+++ b/Nations/pom.xml
@@ -11,18 +11,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>net.pixlies</groupId>
-            <artifactId>PixliesCoreV2</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>31.0.1-jre</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
             <groupId>net.pixlies.core</groupId>
             <artifactId>PixliesCoreV2</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -32,7 +20,7 @@
             <groupId>org.purpurmc.purpur</groupId>
             <artifactId>purpur-api</artifactId>
             <version>1.18-R0.1-SNAPSHOT</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>co.aikar</groupId>
