--- a/PixliesCore/pom.xml
+++ b/PixliesCore/pom.xml
@@ -68,14 +68,14 @@
                         <configuration>
                             <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
                             <relocations>
-                                <relocation>
-                                    <pattern>co.aikar.commands</pattern>
-                                    <shadedPattern>net.pixlies.acf</shadedPattern>
-                                </relocation>
-                                <relocation>
-                                    <pattern>co.aikar.locales</pattern>
-                                    <shadedPattern>net.pixlies.locales</shadedPattern>
-                                </relocation>
+<!--                                <relocation>-->
+<!--                                    <pattern>co.aikar.commands</pattern>-->
+<!--                                    <shadedPattern>net.pixlies.acf</shadedPattern>-->
+<!--                                </relocation>-->
+<!--                                <relocation>-->
+<!--                                    <pattern>co.aikar.locales</pattern>-->
+<!--                                    <shadedPattern>net.pixlies.locales</shadedPattern>-->
+<!--                                </relocation>-->
                             </relocations>
                             <filters>
                                 <filter>
