Implemented really hacky fixes

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
             <version>2.11.0</version>
         </dependency>
         <dependency>
+            <groupId>co.aikar</groupId>
+            <artifactId>acf-paper</artifactId>
+            <version>0.5.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.ocpsoft.prettytime</groupId>
             <artifactId>prettytime</artifactId>
             <version>5.0.2.Final</version>
