--- a/PixliesCore/src/main/resources/calendar.yml
+++ b/PixliesCore/src/main/resources/calendar.yml
@@ -4,5 +4,5 @@ events:
     '12':
        '24':
        	  todo:
-            - "bc &cMarry Pixlies Christmas!"
+            - "bc &cMerry Pixlies Christmas!"
             - "eco give @a 20 Christmas money"
